Update tag names and fix colours

--- a/hobbies.html
+++ b/hobbies.html
@@ -14,14 +14,14 @@
   </head>
 
   <body class="hobbies-container">
-    <div class="main-nav">
+    <nav>
       <ul class="nav">
         <li class="name">Aizelle Santiago</li>
         <li><a href="./index.html">Home</a></li>
         <li><a href="./my-liking.html">My liking</a></li>
         <li><a href="./hobbies.html">Hobbies</a></li>
       </ul>
-    </div>
+    </nav>
 
     <header>
       <img src="images/profile-image.jpg" alt="My Jolly photo of me" class="profile-image">
@@ -30,7 +30,7 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section>
         <h2>Travelling</h2>
         <p>My love for wandering is undeniable. Travelling makes any person create their own pisturesque of  memories they will carry all their life.</p>
         
@@ -42,7 +42,7 @@
 
       <h2>Reading</h2>
         <p>This recreations takes me to places and cultures I've never been. Wisdom is food.</p>
-      </div> 
+      </section>
     </main>
 
     <footer>
