--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   </head>
 
   <body class="home-container">
-    <div class="main-nav">
+    <nav>
       <ul class="nav">
         <li class="name">Aizelle Santiago</li>
         <li><a href="./index.html">Home</a></li>
         <li><a href="./my-liking.html">My liking</a></li>
         <li><a href="./hobbies.html">Hobbies</a></li>
       </ul>
-    </div>
+    </nav>
 
     <header>
       <img src="images/profile-image.jpg" alt="My Jolly photo of me" class="profile-image">
@@ -30,7 +30,7 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section>
         <h2>About me ツ</h2>
         <p>Becoming a Front-End Web Developer was one of my aspiration since I was in High School. I love creating and designing
           a Web Space, and now I want to enrich the user experience by using Web languages especially JavaScript. I've lived
@@ -38,9 +38,9 @@
           I lived and worked, through this Personal Web page of mySELF :).</p>
         <p>I’ve been a qualified nurse and chef over the past years, and my journey as Web Developer unlocks from this space that
           I designed.</p>
-      </div>
+      </section>
 
-      <div class="card">
+      <section>
         <h2>Goals</h2>
         <p>It is my deep desire to create lasting impressions to my clients by enriching my skills writing codes for:</p>
         <ul class="skills">
@@ -50,7 +50,7 @@
           <li>React</li>
         </ul>
         <p>I'd like to help the friends I've made during my past careers in creating a competetive Web Space for their living.</p>
-      </div>
+      </section>
     </main>
     
     <footer>
