--- a/my-liking.html
+++ b/my-liking.html
@@ -13,15 +13,15 @@
         <link href="https://fonts.googleapis.com/css?family=Fuzzy+Bubbles" rel="stylesheet">
     </head>
 
-    <body class="my-liking">
-    <div class="main-nav">
+    <body class="my-liking-container">
+    <nav>
         <ul class="nav">
         <li class="name">Aizelle Santiago</li>
         <li><a href="./index.html">Home</a></li>
         <li><a href="./my-liking.html">My likings</a></li>
         <li><a href="./hobbies.html">Hobbies</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
         <img src="images/profile-image.jpg" alt="My Jolly photo of me" class="profile-image">
@@ -30,10 +30,10 @@
     </header>
 
     <main class="flex">
-        <div class="card">
-        <h2>My Favorite things</h2>
-        <p><i>They said the best way to enjoy your favorite things everyday, is to only own your favorite things.</i></p>
-        <p><br>Here are some of the things I'm fond of: </p>
+        <section>
+            <h2>My Favorite things</h2>
+            <p><i>They said the best way to enjoy your favorite things everyday, is to only own your favorite things.</i></p>
+            <p><br>Here are some of the things I'm fond of: </p>
             <ul class="list">
                 <li>Color: Yellow and Green</li>
                 <li>Pizza Toppings: Mushrooms, Black Olives, Pineapples </li>
@@ -57,7 +57,7 @@
                 <li>Favorite Thing to do on Weekends: Home DIYs and repairs</li>
                 <li>Favorite: Silly Word: Sugoy (means amazing)</li>
             </ul>
-        </div>
+        </section>
     </main>
 
     <footer>
